Inicio semi-responsivo

--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -7,7 +7,149 @@
     <a href="#">Registrarme</a>
   </div>
   <div class="info-view">
+      <div class="box">
+        <h2>Últimos errores</h2>
+        <table class="table"> 
+            <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Descripción</th>
+                  <th>Prioridad</th>
+                  <th>Estado</th>
+                  <th>Proyecto</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+
+              </tbody>
+        </table>
+      </div>
+      <div class="box">
+        <div class="text-info">
+          <h3>Hemos resuelto más de 300 errores</h3>
+        </div>
+      </div>
       
+      <div class="box">
+        <div class="text-info">
+          <h3>Hemos recibido más de 100.000 reportes</h3>
+        </div>
+      </div>
+      <div class="box">
+        <h2>Últimos reportes</h2>
+        <table class="table"> 
+            <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Descripción</th>
+                  <th>Prioridad</th>
+                  <th>Estado</th>
+                  <th>Proyecto</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+                                 <tr>
+                  <td>Hola</td>
+
+                  <td>Adios</td>
+
+                  <td>Luego</td>
+
+                  <td>Probando</td>
+
+                  <td>Juju</td>
+                </tr>
+
+              </tbody>
+        </table></div>
   </div>
   <div class="parallax second">
     <div class="item">
