--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -1,4 +1,7 @@
-{% extends 'home/base.html' %} {% block content %}
+{% extends 'home/base.html' %} {%load static%} {% block content %}
+
+<link rel="stylesheet" href='{%static "css/report.css"%}'>
+
 <section class="home">
   <div class="container-form">
     <!-- code here -->
