--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -1,5 +1,7 @@
 {% extends 'home/base.html' %} {%load static%} {% block content %}
 
+<link rel="stylesheet" href='{%static "css/start.css"%}'>
+
 <section class="home">
   <div class="parallax">
     <div class="text">Inicio</div>
