Correción de errores

--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -16,7 +16,7 @@
     <title>Inicio</title> 
 </head>
 <body>
-    <nav class="sidebar">
+    <nav class="sidebar close hide">
         
         <header>
             <div class="image-text">
