Correción de errores

--- a/bug_tracking/buglist/templates/buglist/buglist.html
+++ b/bug_tracking/buglist/templates/buglist/buglist.html
@@ -50,7 +50,9 @@
             </tr>
               {%endfor%}
             {%else%}
-              <p>No hay errores disponibles</p>
+            <tr>
+              <td>No hay errores disponibles</p>
+            </tr>
             {%endif%}
             
             <tr>
@@ -131,7 +133,9 @@
             </tr>
               {%endfor%}
             {%else%}
-              <p>No hay errores disponibles</p>
+            <tr>
+              <td>No hay errores disponibles</p>
+            </tr>
             {%endif%}
             
           </tbody>
