Revert "Merge branch 'origin/main' into bug_detail"
This reverts commit 83066bbefe4490efac818f4e47f67b24b9ca8e2f, reversing
changes made to a616bb502f67479f26fbbe84c8f3efe6cc02df5a.

--- a/bug_tracking/bug_report/static/css/report.css
+++ b/bug_tracking/bug_report/static/css/report.css
@@ -111,8 +111,8 @@
   }
 
   .action button[type="submit"]:hover {
-      background-color: var(--title-color);
-      color: white;
+      background-color: var(--primary-color);
+      color: var(--primary-color-light);
       transition: var(--tran-03);
   }
 
