--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -43,7 +43,7 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="home">
+                        <a href="{% url 'home:principal' %}">
                             <i class='bx bx-home-alt icon' ></i>
                             <span class="text nav-text">Inicio</span>
                         </a>
