--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -14,7 +14,7 @@
           <small>Para reportar el error completa los campos</small>
         </h2>
       </div>
-      <form method="post">
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="input">
           {{ form_bug.as_p }}
@@ -41,13 +41,15 @@
     </div>
   </div>
 
+  <!--
   <h1 class="text">Reportar un bug</h1>
   <form method="post">
-    <!-- csrf es para proteccion contra crost site request forgeries -->
+    // csrf es para proteccion contra crost site request forgeries
     {% csrf_token %} {{ form_bug.as_p }} {{ form_usuario.as_p }} {{
     form_proyecto.as_p }}
 
     <button type="submit">Enviar reporte</button>
   </form>
 </section>
+-->
 {% endblock %}
