--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -1,88 +1,87 @@
 {%extends 'home/base.html'%}
+{% load static %}
+{% load humanize %}  
+{% block content %} 
 
-{% block content %}
+<link rel="stylesheet" href='{%static "css/detail.css"%}'>
 
-    <section class="home">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Titulo</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ bug.id_bug }}</td>
-                    <td>{{ bug.titulo }}</td>
-                </tr>
-            </tbody>
-        </table>
+<section class="home">
+    <div class="info-view">
+        <div class="box">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Titulo</th>
+                        <th>Fecha</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ bug.id_bug }}</td>
+                        <td>{{ bug.titulo }}</td>
+                        <td>{{ bug.fecha_reporte | naturaltime}}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <div style="margin-top: 100px;"></div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Prioridad</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ bug.prioridad }}</td>
+                        <td>{{ bug.estado }}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Prioridad</th>
-                    <th>Estado</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ bug.prioridad }}</td>
-                    <td>{{ bug.estado }}</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Descripción</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ bug.descripcion }}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <div style="margin-top: 200px;"></div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Proyecto</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ proyecto.nombre_proyecto }}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Descripción</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ bug.descripcion }}</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Programador</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ programador.nombre_programador }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
-        <div style="margin-top: 300px;"></div>
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Proyecto</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ proyecto.nombre_proyecto }}</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div style="margin-top: 400px;"></div>
-
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Programador</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>{{ programador.nombre_programador }}</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <div style="margin-top: 500px;"></div>
-
-        <div class="text">Reportes</div>
+        <!-- <div class="text">Reportes</div>
         {%if reporte%}
         <table class="table">
             <thead>
@@ -106,8 +105,9 @@
         </table>
         {% else %}
         <div class="text">No hay reportes disponibles</div>
-        {% endif %}
-    </section>
+        {% endif %} -->
+    </div>
+</section>
 
 
 {% endblock %}
