--- a/bug_tracking/bug_report/static/css/report.css
+++ b/bug_tracking/bug_report/static/css/report.css
@@ -189,3 +189,11 @@
   .input label[for="id_nombre_proyecto"] {
       display: none;
   }
+
+  .input label[for="id_titulo"]{
+        display: none;
+  }
+
+  .input label[for="id_imagenes"]{
+    display: none;
+}
