--- a/bug_tracking/home/templates/home/base.html
+++ b/bug_tracking/home/templates/home/base.html
@@ -89,9 +89,9 @@
 
             <div class="bottom-content">
                 <li class="">
-                    <a href="#">
-                        <i class='bx bx-log-out icon' ></i>
-                        <span class="text nav-text">Cerrar sesión</span>
+                    <a href="login">
+                        <i class='bx bx-log-in icon' ></i>
+                        <span class="text nav-text">Iniciar sesión</span>
                     </a>
                 </li>
 
