--- a/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
+++ b/bug_tracking/bug_report/templates/bug_report/reporte_bug.html
@@ -60,8 +60,7 @@
       </div>
       <div class="modal-body">
         <p>
-          Tu reporte ha sido enviado con éxito, en breve nos pondremos en
-          contacto contigo.
+          Tu reporte ha sido enviado con éxito.
         </p>
       </div>
 
