--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -98,7 +98,7 @@
             <div id="myModal" class="modal">
                 <!-- Modal content -->
                 <div class="modal-content">
-                  <span class="close">&times;</span>
+                  <span class="close" id="closeModal">&times;</span>
                   <img id="img01" class="modal-img">
                   <div id="caption" class="modal-caption"></div>
                 </div>
